# DOMe-and-DOMer-2

./: .env.example  .env.template  .gitignore  LICENSE  Makefile  README.md  analyze_insights.py  analyze_patterns.py  analyze_results.py  dataset_cleaner.py  evaluate.py  fix_json.py  image_match.py  parallel_runner.py  prompts.py  pyproject.toml  requirements.txt  run.py  serial_runner.py  setup.cfg  test_env.py  test_openai.py  utils.py
data/: README.md  dom_tasks.jsonl  dom_tasks_fixed.jsonl  evaluation_output.jsonl  ground_truth.jsonl  task_schema.json
data/results/: results.json
evaluation/: README.md  auto_eval.py  fuzzy_match.py  image_match.py  parallel_eval.py
examples/: model_usage.py
models/: __init__.py  base.py  claude.py  gemini.py  gemini_function_parser.py  gpt4.py  lavague_runner.py  prompts.py
results/: README.md  accessibility_tree_cambridge_lookup_1.json  accessibility_tree_cambridge_search_1.json  results.json
scripts/: README.md  add_target_html.py  compare_models.py
utils/: README.md  accessibility_utils.py  executor.py  screenshot_utils.py
